GateWay/build/log/idf_py_stdout_output_89771
[1/367] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/split_argv.c.obj
[2/367] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_utils_memory.c.obj
[3/367] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_port_esp32.c.obj
[4/367] Performing build step for 'bootloader'
[1/1] cd /home/dongkhoa/Documents/Project_1/GateWay/build/bootloader/esp-idf/esptool_py && /home/dongkhoa/esp/python_env/idf5.1_py3.10_env/bin/python /home/dongkhoa/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dongkhoa/Documents/Project_1/GateWay/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[5/365] Building C object esp-idf/cmock/CMakeFiles/__idf_cmock.dir/CMock/src/cmock.c.obj
[6/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/commands.c.obj
[7/365] Linking C static library esp-idf/driver/libdriver.a
[8/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/esp_console_repl.c.obj
[9/365] Building C object esp-idf/lvgl_touch/CMakeFiles/__idf_lvgl_touch.dir/touch_driver.c.obj
FAILED: esp-idf/lvgl_touch/CMakeFiles/__idf_lvgl_touch.dir/touch_driver.c.obj 
/home/dongkhoa/esp/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.1-dirty\" -DLV_CONF_INCLUDE_SIMPLE=1 -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/dongkhoa/Documents/Project_1/GateWay/build/config -I/home/dongkhoa/Documents/Project_1/GateWay/components/lvgl_esp32_drivers/lvgl_touch -I/home/dongkhoa/esp/esp-idf/components/newlib/platform_include -I/home/dongkhoa/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dongkhoa/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dongkhoa/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/dongkhoa/esp/esp-idf/components/freertos/esp_additions/include -I/home/dongkhoa/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/include -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/include/soc -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/dongkhoa/esp/esp-idf/components/heap/include -I/home/dongkhoa/esp/esp-idf/components/log/include -I/home/dongkhoa/esp/esp-idf/components/soc/include -I/home/dongkhoa/esp/esp-idf/components/soc/esp32 -I/home/dongkhoa/esp/esp-idf/components/soc/esp32/include -I/home/dongkhoa/esp/esp-idf/components/hal/esp32/include -I/home/dongkhoa/esp/esp-idf/components/hal/include -I/home/dongkhoa/esp/esp-idf/components/hal/platform_port/include -I/home/dongkhoa/esp/esp-idf/components/esp_rom/include -I/home/dongkhoa/esp/esp-idf/components/esp_rom/include/esp32 -I/home/dongkhoa/esp/esp-idf/components/esp_rom/esp32 -I/home/dongkhoa/esp/esp-idf/components/esp_common/include -I/home/dongkhoa/esp/esp-idf/components/esp_system/include -I/home/dongkhoa/esp/esp-idf/components/esp_system/port/soc -I/home/dongkhoa/esp/esp-idf/components/esp_system/port/include/private -I/home/dongkhoa/esp/esp-idf/components/xtensa/include -I/home/dongkhoa/esp/esp-idf/components/xtensa/esp32/include -I/home/dongkhoa/esp/esp-idf/components/lwip/include -I/home/dongkhoa/esp/esp-idf/components/lwip/include/apps -I/home/dongkhoa/esp/esp-idf/components/lwip/include/apps/sntp -I/home/dongkhoa/esp/esp-idf/components/lwip/lwip/src/include -I/home/dongkhoa/esp/esp-idf/components/lwip/port/include -I/home/dongkhoa/esp/esp-idf/components/lwip/port/freertos/include -I/home/dongkhoa/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/dongkhoa/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/dongkhoa/Documents/Project_1/GateWay/components/lvgl -I/home/dongkhoa/Documents/Project_1/GateWay/components/lvgl/lvgl -I/home/dongkhoa/esp/esp-idf/components/driver/include -I/home/dongkhoa/esp/esp-idf/components/driver/deprecated -I/home/dongkhoa/esp/esp-idf/components/driver/analog_comparator/include -I/home/dongkhoa/esp/esp-idf/components/driver/dac/include -I/home/dongkhoa/esp/esp-idf/components/driver/gpio/include -I/home/dongkhoa/esp/esp-idf/components/driver/gptimer/include -I/home/dongkhoa/esp/esp-idf/components/driver/i2c/include -I/home/dongkhoa/esp/esp-idf/components/driver/i2s/include -I/home/dongkhoa/esp/esp-idf/components/driver/ledc/include -I/home/dongkhoa/esp/esp-idf/components/driver/mcpwm/include -I/home/dongkhoa/esp/esp-idf/components/driver/parlio/include -I/home/dongkhoa/esp/esp-idf/components/driver/pcnt/include -I/home/dongkhoa/esp/esp-idf/components/driver/rmt/include -I/home/dongkhoa/esp/esp-idf/components/driver/sdio_slave/include -I/home/dongkhoa/esp/esp-idf/components/driver/sdmmc/include -I/home/dongkhoa/esp/esp-idf/components/driver/sigma_delta/include -I/home/dongkhoa/esp/esp-idf/components/driver/spi/include -I/home/dongkhoa/esp/esp-idf/components/driver/temperature_sensor/include -I/home/dongkhoa/esp/esp-idf/components/driver/touch_sensor/include -I/home/dongkhoa/esp/esp-idf/components/driver/twai/include -I/home/dongkhoa/esp/esp-idf/components/driver/uart/include -I/home/dongkhoa/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/dongkhoa/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/dongkhoa/esp/esp-idf/components/esp_pm/include -I/home/dongkhoa/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/dongkhoa/Documents/Project_1/GateWay=. -fmacro-prefix-map=/home/dongkhoa/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/lvgl_touch/CMakeFiles/__idf_lvgl_touch.dir/touch_driver.c.obj -MF esp-idf/lvgl_touch/CMakeFiles/__idf_lvgl_touch.dir/touch_driver.c.obj.d -o esp-idf/lvgl_touch/CMakeFiles/__idf_lvgl_touch.dir/touch_driver.c.obj -c /home/dongkhoa/Documents/Project_1/GateWay/components/lvgl_esp32_drivers/lvgl_touch/touch_driver.c
/home/dongkhoa/Documents/Project_1/GateWay/components/lvgl_esp32_drivers/lvgl_touch/touch_driver.c: In function 'touch_driver_read':
/home/dongkhoa/Documents/Project_1/GateWay/components/lvgl_esp32_drivers/lvgl_touch/touch_driver.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: some warnings being treated as errors
[10/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_dbl.c.obj
[11/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_end.c.obj
[12/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_hashtable.c.obj
[13/365] Linking C static library esp-idf/efuse/libefuse.a
[14/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_cmd.c.obj
[15/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_file.c.obj
[16/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_dstr.c.obj
[17/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_date.c.obj
[18/365] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/linenoise/linenoise.c.obj
ninja: build stopped: subcommand failed.
